# ECE496_texas_holdem_AI

./: .gitignore  CMakeLists.txt  README.md  RPSTrainer.cpp  RPSTrainer.h  art.h  game.cpp  game.h  main.cpp  player.cpp  player.h  test.json  utils.h
Kuhn_poker/: read_me
Kuhn_poker/kuhn_poker_src/: CMakeLists.txt  information_set.cpp  information_set.h  kuhn_poker.cpp  kuhn_poker.h  kuhn_poker_cfr_trainer.cpp  kuhn_poker_cfr_trainer.h  main.cpp
proof_of_concept/: README.md  RPSTrainer.cpp  RPSTrainer.h  art.h  game.h  main.cpp  player.cpp  player.h  utils.h
texas_holdem/: CFR_Trainer.cpp  CFR_Trainer.h  CmakeLists.txt  README.md  concrete_game_state.cpp  concrete_game_state.h  game.cpp  game.h  game_state.h  gametree.cpp  gametree.h  infoset.cpp  infoset.h  main.cpp  player.cpp  player.h  treenode.cpp  treenode.h  utils.h
